--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-  
+
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
@@ -27,30 +27,30 @@
     <h2>Web developer <i class="fa-solid fa-user-ninja"></i></h2>
 
     <!--MODAL-->
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">explore at will</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-dark">
-        <!--LISTAS BOOTSTRAP-->
-        <ul class="list-group list-group-flush">
-         <a href="/views/projects/htmlcss.html"> <li  class="list-group-item"><i class="fa-brands fa-html5"><i class="fa-brands fa-css3"></i></i>HTML / CSS</li></a>
-         <a href="/views/projects/htmlcss.html"> <li class="list-group-item"><i class="fa-brands fa-php"></i>PHP</li></a>
-         <a href="/views/projects/htmlcss.html"> <li class="list-group-item"><i class="fa-brands fa-js"></i>JavaScript</li></a>
-        </ul>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">explore at will</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body text-dark">
+            <!--LISTAS BOOTSTRAP-->
+            <ul class="list-group list-group-flush">
+            <a href="/views/projects/htmlcss.html"> <li  class="list-group-item"><i class="fa-brands fa-html5"><i class="fa-brands fa-css3"></i></i>HTML / CSS</li></a>
+            <a href="/views/projects/htmlcss.html"> <li class="list-group-item"><i class="fa-brands fa-php"></i>PHP</li></a>
+            <a href="/views/projects/htmlcss.html"> <li class="list-group-item"><i class="fa-brands fa-js"></i>JavaScript</li></a>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
     <!--FIM MODAL-->
     <a type="button" class="menu btn btn-primary" data-toggle="modal" data-target="#exampleModal">
       Projetos
@@ -59,10 +59,19 @@
     <a class="menu" href="">Javascript</a>
     <a class="menu" href="">HTML / CSS</a>
 
+    <div class="contacts">
+      <a href="https://mail.google.com/" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://github.com/kev1nnnnnnn" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/john-kevin-3ba351184/"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+  
+    
   </div>
+  
 </div>
 
-<section class="">
+  
+
   <!-- Footer -->
   <footer class="text-center text-white" style="background-color: #012026;">
     <!-- Grid container -->
@@ -75,7 +84,7 @@
             Sign up!
           </button>
         </p>
-      </section>
+   
       <!-- Section: CTA -->
     </div>
     <!-- Grid container -->
